Introduced Metar class, defined core meteorology types.

--- a/Source/Source.vcxproj.filters
+++ b/Source/Source.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Meteorology.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Metar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Metar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
