--- a/Source/Source.vcxproj
+++ b/Source/Source.vcxproj
@@ -71,10 +71,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Metar.h" />
-    <ClInclude Include="Meteorology.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="Metar.hpp" />
+    <ClInclude Include="Meteorology.hpp" />
+    <ClInclude Include="stdafx.hpp" />
+    <ClInclude Include="targetver.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Metar.cpp" />
