Initial pass of optional support for METAR fields. nlohmann/json dependency packaged.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # VS directories
 .vs/
 
+# NuGet
+[Pp]ackages/
+
 # Build results
 [Bb]uilt/
 
@@ -43,6 +46,8 @@ ipch/
 *.aps
 *.ncb
 *.opensdf
+*.opendb
+*.db
 *.sdf
 *.cachefile
 
